# rust-template

./: .gitignore  README.md
ai-code-reviewer/: Cargo.toml  Constants.toml  README.md  client.toml
ai-code-reviewer/crates/core/: common.rs  github.rs  init.rs  main.rs  openai.rs  options.rs  reviewer.rs
ai-code-reviewer/crates/rust-glm/: Cargo.toml  Constants.toml  README.md  client.toml  context.json  context.txt
ai-code-reviewer/crates/rust-glm/src/: api.rs  client.rs  context.rs  glm_client.rs  init.rs  jwt.rs  lib.rs  message.rs  printer.rs  util.rs
ai-code-reviewer/crates/rust-glm/src/models/: glm4.rs  mod.rs
ai-code-reviewer/src/: github.rs  main.rs  openai.rs  options.rs  reviewer.rs
anyhow-example/: Cargo.toml
api-tpl-rs-example/: Cargo.toml
docs/: ai-code-reviewer.md
encoding-rs-io-example/: Cargo.toml
getting-started/: Cargo.toml  README.md  build.rs
getting-started/crates/core/: logger.rs  main.rs  search.rs
getting-started/crates/core/log/: logger.rs  messages.rs  mod.rs
getting-started/crates/core/logger/: logger.rs  messages.rs
getting-started/crates/core/options/: defs.rs  hiargs.rs  lowargs.rs  mod.rs  parse.rs
getting-started/crates/core/options/doc/: help.rs  mod.rs  template.short.help  version.rs
getting-started/crates/grep/: Cargo.toml
getting-started/crates/grep/src/: lib.rs
getting-started/crates/matcher/: Cargo.toml
getting-started/crates/matcher/src/: lib.rs
getting-started/crates/printer/: Cargo.toml
getting-started/crates/printer/src/: color.rs  counter.rs  lib.rs  standard.rs  stats.rs  util.rs
getting-started/crates/regex/: Cargo.toml
getting-started/crates/regex/src/: ast.rs  ban.rs  config.rs  error.rs  lib.rs  literals.rs  matcher.rs  non_matching.rs  strip.rs
getting-started/crates/searcher/: Cargo.toml
getting-started/crates/searcher/src/: lib.rs  line_buffer.rs  lines.rs  sink.rs
getting-started/crates/searcher/src/searcher/: core.rs  glue.rs  mod.rs
getting-started/tests/: tests.rs
getting-started/tests/anyhow/: anyhow.rs  mod.rs  test.txt
getting-started/tests/grammar/: async_await.rs  concurrency_lock_tests.rs  concurrency_tests.rs  data_type_convert_tests.rs  data_type_primitive_tests.rs  data_type_slice_tests.rs  data_type_str_tests.rs  dynamic_dispatch.rs  error_handle_tests.rs  file.rs  generic.rs  life_cycle.rs  lifetime.rs  lifetime_oom.rs  lifetime_specifier.rs  loop_match.rs  macro_derive.rs  macro_tests.rs  macros_attribute_tests.rs  macros_stdlib_tests.rs  mod.rs  mod_tests.rs  oop_structure_tests.rs  oop_tests.rs  option_tests.rs  ownership_tests.rs  patterns_tests.rs  pointer_smart_box.rs  pointer_smart_rc_refcell.rs  pointer_smart_tests.rs  pointer_tests.rs  trait_as_ref_tests.rs  trait_constraint_tests.rs  trait_marker.rs  trait_tests.rs  tuple_tests.rs
getting-started/tests/lexopt/: usage.rs
getting-started/tests/log/: usage.rs
getting-started/tests/regex/: mod.rs  regex_automata.rs  regex_syntax.rs
getting-started/tests/stdlib/: intrinsics_funcs.rs  mod.rs  std_env.rs  std_mem.rs  std_path.rs  std_ptr.rs  std_thread.rs  vec_resize.rs
getting-started/tests/termcolor/: usage.rs
lazy-static-example/: Cargo.toml
regex-example/: Cargo.toml
reqwest-example/: Cargo.toml
rsntp-example/: Cargo.toml
(+37 files in other folders)
