[package]
name = "ai-code-reviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
lexopt = "0.3.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
RustGLM = "0.1.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
