[package]
name = "ai-code-reviewer"
version = "0.1.0"
edition = "2021"

# 二进制文件定制化修改配置
[[bin]]
name = "ai-code-reviewer"
path = "crates/core/main.rs"    # 指定main入口文件路径

[workspace]
members = [
    "crates/rust-glm"
]

[dependencies]
rust-glm = { version = "0.1.5", path = "crates/rust-glm" }
anyhow = "1.0.86"
chrono = "0.4.38"
futures = "0.3.30"
lexopt = "0.3.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
