[package]
name = "getting-started"
version = "0.1.0"
edition = "2021"
authors = ["Arvin Lee"]
description = "Rust学习项目，参考ripgrep项目"
#build = "build.rs"     # 用于自定义构建逻辑，在编译过程的开始阶段运行
autotests = false       # 关闭自动测试

# 二进制文件定制化修改配置
[[bin]]
name = "gs"
path = "crates/core/main.rs"    # 指定main入口文件路径

# 这里将测试放到单独的目录下
[[test]]
name = "unit"
path = "tests/tests.rs"     #根测试模块，里面声明子测试模块

[workspace]
members = [

]

[dependencies]
# 下面依赖版本默认当作开头包含“^”处理，即跳脱条件：https://rustwiki.org/zh-CN/cargo/reference/specifying-dependencies.html#/caret-requirements%E8%B7%B3%E8%84%B1%E6%9D%A1%E4%BB%B6
lexopt = "0.3.0"
log = "0.4.5"
rand = "0.9.0-alpha.1"   # 按 ^0.4.5 解释，即 >=0.4.5 <0.5.0, 由于当前测试符合条件的最新版本是 0.4.21, 所以最终会引入 0.4.21

[profile.release]
debug = true


