[package]
name = "rust-glm"
version = "0.1.5"   # 在RustGLM 0.1.4 版本上修改，原项目路径 https://github.com/blueokanna/RustGLM.git
edition = "2021"
repository = "https://github.com/blueokanna/RustGLM.git"
license = "Apache-2.0"
keywords = ["zhipu","chatglm","http","ai","sdk"]

[dependencies]
toml = "0.8.10"
chrono = "0.4.33"
hmac = "0.12.1"
sha2 = "0.10.8"
base64url = "0.1.0"
rsntp = "4.0.0"
once_cell = "1.19.0"
serde_json = "1.0.113"
reqwest = { version = "0.12.1", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
regex = { version = "1.10.3"}
tokio = { version = "1.35.1", features = ["full"] }
time = "0.3.32"
lazy_static = "1.4.0"
anyhow = "1.0.79"
tokio-util = "0.7.10"
futures-util = { version = "0.3.30", features = ["compat"] }
futures = "0.3.30"
serde_derive = "1.0.197"
async-trait = "0.1.77"
